change and add the new id name for resolving pay page layout issue

--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -1,4 +1,4 @@
-#user-settings, #add-ip, #sign-in, #registration {
+#user-settings, #add-ip,#sign-in-form, #new-account {
 .form-control[disabled] {
   background-color: $white;
   border:none;
